Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,52 +18,120 @@ steps:
       versionSpec: $(NODE_VERSION)
     displayName: "Use Node.js $(NODE_VERSION)"
 
-  - script: node --version
-    displayName: "Check Node.js version"
+  - script: node --version && npm --version
+    displayName: "Check Node.js and npm versions"
 
-  # Backend build
+  # Debug: Check directory structure
   - script: |
-      cd server
-      npm install
+      echo "=== Repository Structure Debug ==="
+      echo "Current directory: $(pwd)"
+      echo ""
+      echo "Root directory contents:"
+      ls -la
+      echo ""
+      echo "Looking for package.json files:"
+      find . -name "package.json" -type f
+      echo ""
+      echo "Directory structure:"
+      tree -L 2 || find . -type d -maxdepth 2
+    displayName: "Debug: Repository Structure"
+
+  # Set dynamic variables based on actual structure
+  - script: |
+      # Check for backend directory
+      if [ -d "server" ]; then
+        echo "##vso[task.setvariable variable=BACKEND_DIR]server"
+      elif [ -d "backend" ]; then
+        echo "##vso[task.setvariable variable=BACKEND_DIR]backend"
+      elif [ -d "api" ]; then
+        echo "##vso[task.setvariable variable=BACKEND_DIR]api"
+      elif [ -f "package.json" ] && grep -q "express\|fastify\|koa" package.json; then
+        echo "##vso[task.setvariable variable=BACKEND_DIR]."
+      else
+        echo "##vso[task.setvariable variable=BACKEND_DIR]NOT_FOUND"
+      fi
+
+      # Check for frontend directory
+      if [ -d "client" ]; then
+        echo "##vso[task.setvariable variable=FRONTEND_DIR]client"
+      elif [ -d "frontend" ]; then
+        echo "##vso[task.setvariable variable=FRONTEND_DIR]frontend"
+      elif [ -d "web" ]; then
+        echo "##vso[task.setvariable variable=FRONTEND_DIR]web"
+      elif [ -d "app" ]; then
+        echo "##vso[task.setvariable variable=FRONTEND_DIR]app"
+      else
+        echo "##vso[task.setvariable variable=FRONTEND_DIR]NOT_FOUND"
+      fi
+    displayName: "Detect Project Structure"
+
+  # Install backend dependencies
+  - script: |
+      if [ "$(BACKEND_DIR)" != "NOT_FOUND" ]; then
+        echo "Installing backend dependencies in: $(BACKEND_DIR)"
+        cd $(BACKEND_DIR)
+        npm install
+        echo "Backend dependencies installed successfully"
+      else
+        echo "##vso[task.logissue type=error]Backend directory not found!"
+        exit 1
+      fi
     displayName: "Install Backend Dependencies"
 
-  # Frontend build
+  # Install frontend dependencies and build
   - script: |
-      cd client
-      npm install
-      npm run build
-    displayName: "Build Frontend App"
+      if [ "$(FRONTEND_DIR)" != "NOT_FOUND" ]; then
+        echo "Building frontend in: $(FRONTEND_DIR)"
+        cd $(FRONTEND_DIR)
+        npm install
+        npm run build
+        echo "Frontend built successfully"
+      else
+        echo "##vso[task.logissue type=error]Frontend directory not found!"
+        exit 1
+      fi
+    displayName: "Build Frontend"
 
-  # Create backend package
+  # Package backend
   - task: ArchiveFiles@2
     inputs:
-      rootFolderOrFile: 'server'
+      rootFolderOrFile: '$(BACKEND_DIR)'
       includeRootFolder: false
       archiveType: 'zip'
       archiveFile: '$(Build.ArtifactStagingDirectory)/backend.zip'
+      replaceExistingArchive: true
     displayName: "Package Backend"
+    condition: ne(variables['BACKEND_DIR'], 'NOT_FOUND')
 
-  # Create frontend package
+  # Package frontend
   - task: ArchiveFiles@2
     inputs:
-      rootFolderOrFile: 'client/build'
+      rootFolderOrFile: '$(FRONTEND_DIR)/build'
       includeRootFolder: false
       archiveType: 'zip'
       archiveFile: '$(Build.ArtifactStagingDirectory)/frontend.zip'
-    displayName: "Package Frontend"
+      replaceExistingArchive: true
+    displayName: "Package Frontend Build"
+    condition: ne(variables['FRONTEND_DIR'], 'NOT_FOUND')
 
   # Deploy Backend
   - task: AzureWebApp@1
     inputs:
       azureSubscription: '$(AZURE_SUBSCRIPTION)'
+      appType: 'webAppLinux'
       appName: '$(BACKEND_APP_NAME)'
       package: '$(Build.ArtifactStagingDirectory)/backend.zip'
+      runtimeStack: 'NODE|18-lts'
     displayName: "Deploy Backend to Azure"
+    condition: ne(variables['BACKEND_DIR'], 'NOT_FOUND')
 
   # Deploy Frontend
   - task: AzureWebApp@1
     inputs:
       azureSubscription: '$(AZURE_SUBSCRIPTION)'
+      appType: 'webAppLinux'
       appName: '$(FRONTEND_APP_NAME)'
       package: '$(Build.ArtifactStagingDirectory)/frontend.zip'
+      runtimeStack: 'NODE|18-lts'
     displayName: "Deploy Frontend to Azure"
+    condition: ne(variables['FRONTEND_DIR'], 'NOT_FOUND')
